[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-limiter>=3.12",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-cors>=5.0.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]
