[project]
name = "http-security-header-analyzer"
version = "0.1.0"
description = "A Flask-based web application and REST API for analyzing HTTP security headers. Provides live analysis, caching, rate limiting, and a user-friendly web interface. See @README.md for details."
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-limiter>=3.12",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-cors>=5.0.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
    # humble runtime deps
    "colorama>=0.4.6",
    "fpdf2>=2.7",
    "tldextract>=5.1.2",
    "XlsxWriter>=3.2.0",
]
